--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://darshan-backend-k0kxqln7q-darshak1508s-projects.vercel.app
+REACT_APP_API_BASE_URL=https://darshan-backend-k0kxqln7q-darshak1508s-projects.vercel.app/api
